fix position of title and z-index of navbar

--- a/drupal/sites/all/themes/antistatique/assets/sass/components/navbar.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/components/navbar.scss
@@ -38,7 +38,7 @@ category: Components - Navbar
 
 .header {
   position: absolute;
-  z-index: 9999;
+  z-index: 2;
   width: 100%;
 }
 
