--- a/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
@@ -85,9 +85,9 @@ category: Layout - Cover
     width: 100%;
     color: $white;
     padding-top: 2em;
-    padding-bottom: 0.4em;
+    padding-bottom: 1em;
     margin-bottom: 0;
-    z-index: 999;
+    z-index: 1;
     @media only screen and (min-width: $screen-sm-min) {
       background: linear-gradient(to bottom, transparentize($midnight-blue, 1) 0%, transparentize($midnight-blue, 0.2) 100%);
     }
